# rust

./: Cargo.toml  config.toml
src/: config.rs  core.rs  engine.rs  lib.rs  main.rs
src/execution/: event_loop.rs  loop.rs  mod.rs  opinion_maker.rs
src/gateway/: mod.rs  opinion_feed.rs  poly_feed.rs
src/infrastructure/: messaging.rs
src/math/: mod.rs  volatility.rs
src/model/: as_logic.rs  mod.rs  risk.rs
