[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"     
rust_decimal = "1.29"
chrono = "0.4"
smallvec = "1.10"    
zerocopy = "0.7"     
ethers = { version = "2.0", features = ["eip712"] }
reqwest = { version = "0.11", features = ["json"] } # 用于发 HTTP 请求
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] } # WebSocket 核心
futures-util = "0.3"
serde_json = "1.0"
url = "2.4"
# 引入我们之前定义的 Core 库
market_maker_core = { path = "../core" }