[package]
name = "enterprise_market_maker"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化与数据处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rust_decimal = "1.29"
rust_decimal_macros = "1.29"
smallvec = "1.10"
chrono = "0.4"
toml = "0.8"
# 网络与通信
reqwest = { version = "0.11", features = ["json"] }
zmq = "0.10"
url = "2.4"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"

# 区块链与加密
ethers = { version = "2.0", features = ["eip712", "ws", "rustls"] }
rand = "0.8"